--- a/style.css
+++ b/style.css
@@ -20,6 +20,26 @@ h1 {
 
 /* Image Container */
 
+.loader {
+    position: fixed;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.loader img {
+    position: fixed;
+    border: 1px solid black;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .image-container {
     margin: 10px 30%;
 }
